RBAC/profile/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: profile 
spec:
  ports:
  - name: profile 
    port: 80
    targetPort: 3005
  selector:
    app.kubernetes.io/instance: profile 

---
apiVersion: v1
kind: Service
metadata:
  name: profile-admin
spec:
  ports:
  - name: profile-admin
    port: 80
    targetPort: 3006
  selector:
    app.kubernetes.io/instance: profile 

...
